internal/fixtures/architecture/negative/ui-to-sdk/packages/ui/src/bad.ts
import { createClient } from "@deepwork/sdk";

export const client = createClient();
